[gd_scene load_steps=4 format=3 uid="uid://b5f3j1apo7b67"]

[ext_resource type="Script" path="res://keypads.gd" id="1_v2egj"]
[ext_resource type="PackedScene" uid="uid://be6xfc1k75axq" path="res://count_2.tscn" id="2_52c42"]
[ext_resource type="PackedScene" uid="uid://njoknwet2k77" path="res://win.tscn" id="3_a5rr4"]

[node name="keypads" type="Node2D"]
script = ExtResource("1_v2egj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 18.0
offset_top = -5.0
offset_right = 804.0
offset_bottom = 471.0
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="B1" type="Button" parent="."]
offset_left = 453.0
offset_top = 200.0
offset_right = 553.0
offset_bottom = 300.0
text = "1"

[node name="B2" type="Button" parent="."]
offset_left = 253.0
offset_top = 200.0
offset_right = 353.0
offset_bottom = 300.0
text = "2"

[node name="B3" type="Button" parent="."]
offset_left = 253.0
offset_top = 350.0
offset_right = 353.0
offset_bottom = 450.0
text = "3"

[node name="B4" type="Button" parent="."]
offset_left = 253.0
offset_top = 50.0
offset_right = 353.0
offset_bottom = 150.0
text = "4"

[node name="B5" type="Button" parent="."]
offset_left = 453.0
offset_top = 50.0
offset_right = 553.0
offset_bottom = 150.0
text = "5"

[node name="B6" type="Button" parent="."]
offset_left = 453.0
offset_top = 350.0
offset_right = 553.0
offset_bottom = 450.0
text = "6"

[node name="B7" type="Button" parent="."]
offset_left = 53.0
offset_top = 350.0
offset_right = 153.0
offset_bottom = 450.0
text = "7"

[node name="B8" type="Button" parent="."]
offset_left = 53.0
offset_top = 200.0
offset_right = 153.0
offset_bottom = 300.0
size_flags_horizontal = 4
text = "8"

[node name="B9" type="Button" parent="."]
offset_left = 53.0
offset_top = 50.0
offset_right = 153.0
offset_bottom = 150.0
text = "9"

[node name="E" type="Button" parent="."]
offset_left = 579.0
offset_top = 213.0
offset_right = 791.0
offset_bottom = 285.0
text = "Enter"

[node name="C2" type="ColorRect" parent="."]
visible = false
offset_left = 159.0
offset_top = 83.0
offset_right = 712.0
offset_bottom = 366.0
color = Color(0.254854, 0.587104, 0.248297, 1)

[node name="C3" type="ColorRect" parent="."]
visible = false
offset_left = 159.0
offset_top = 83.0
offset_right = 712.0
offset_bottom = 366.0
color = Color(0.871788, 0.227859, 0.271435, 1)

[node name="C1" type="Label" parent="."]
visible = false
offset_left = 206.0
offset_top = 146.0
offset_right = 680.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 100
text = "CORRECT!"

[node name="C4" type="Label" parent="."]
visible = false
offset_left = 206.0
offset_top = 146.0
offset_right = 680.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 100
text = "WRONG!"

[node name="Timer1" type="Timer" parent="."]

[node name="count2" parent="." instance=ExtResource("2_52c42")]

[node name="win" parent="." instance=ExtResource("3_a5rr4")]

[connection signal="pressed" from="B1" to="." method="_on_b_1_pressed"]
[connection signal="pressed" from="B2" to="." method="_on_b_2_pressed"]
[connection signal="pressed" from="B3" to="." method="_on_b_3_pressed"]
[connection signal="pressed" from="B4" to="." method="_on_b_4_pressed"]
[connection signal="pressed" from="B5" to="." method="_on_b_5_pressed"]
[connection signal="pressed" from="B6" to="." method="_on_b_6_pressed"]
[connection signal="pressed" from="B7" to="." method="_on_b_7_pressed"]
[connection signal="pressed" from="B8" to="." method="_on_b_8_pressed"]
[connection signal="pressed" from="B9" to="." method="_on_b_9_pressed"]
[connection signal="pressed" from="E" to="." method="_on_e_pressed"]
[connection signal="timeout" from="Timer1" to="." method="_on_timer_1_timeout"]
